add changes to the code

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Docker Nginx</title>
 </head>
 <body>
-  <h2> hello coding dojo </h2>
+  <h2> hello coding dojo . </h2>
   <h2>Hello from ghaliah container</h2>
 </body>
 </html>
